General house keeping. Fixing alignment of actual code within index file

--- a/css/demo.css
+++ b/css/demo.css
@@ -1,3 +1,6 @@
+.countdown-container {
+	width: auto;
+}
 .clock {
 	height: 100px;
 }
